<resources>
    <string name="app_name">Submission Android Sederhana</string>
    <string name="tvChar">Name Character : </string>
    <string name="tvPath">Name Path : </string>
    <string name="tvElement">Name Element : </string>
    <string name="textview">TextView</string>
    <string name="description">Description :</string>
    <string name="username">Nyoman Ananta Weda Kesawa</string>
    <string name="email">anantaweda3@gmail.com</string>
    <string-array name="data_name">
        <item>Bronya</item>
        <item>Dan Heng Imbibitor Lunae</item>
        <item>Blade</item>
        <item>Fu Xuan</item>
        <item>Gepard</item>
        <item>Jingliu</item>
        <item>Kafka</item>
        <item>Loucha</item>
        <item>Seele</item>
        <item>Silver Wolf</item>
    </string-array>
    <string-array name="data_photo">
        <item>@drawable/bronya_character</item>
        <item>@drawable/dan_heng_imbibitor_lunae_character</item>
        <item>@drawable/blade_character_action_side_icon</item>
        <item>@drawable/fu_xuan_character_action_side_icon</item>
        <item>@drawable/gepard_character_action_side_icon</item>
        <item>@drawable/jingliu_character_action_side_icon</item>
        <item>@drawable/kafka_character_action_side_icon</item>
        <item>@drawable/luocha_character_action_side_icon</item>
        <item>@drawable/seele_character_action_side_icon</item>
        <item>@drawable/silver_wolf_character_action_side_icon</item>
    </string-array>
</resources>