<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <ImageView
                android:id="@+id/ivIconChar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bronya_character"
                android:layout_weight="2"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:paddingTop="10dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/tvChar" />
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/tvPath" />
                <TextView
                    android:id="@+id/tvPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/tvElement" />
                <TextView
                    android:id="@+id/tvElement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview"/>
            </LinearLayout>
        </TableRow>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="Relic Recomendation : " />

        <TableRow
            android:layout_width="347dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivRelic1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/messenger_traversing_hackerspace" />

            <ImageView
                android:id="@+id/ivRelic2"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/musketeer_of_wild_wheat" />

            <ImageView
                android:id="@+id/ivRelic3"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/prisoner_in_deep_confinement" />
        </TableRow>
        <TableRow
            android:layout_width="347dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvRelic1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textAlignment="center"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tvRelic2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textAlignment="center"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tvRelic3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textAlignment="center"
                android:layout_weight="1"/>
        </TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"/>

    </TableLayout>

</ScrollView>